--- a/public/writing/index.html
+++ b/public/writing/index.html
@@ -5,11 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="noindex, nofollow">
-<title>404 Page not found | LQ7 | 以創作和思考探索世界</title>
+<title>LQ7 | 以創作和思考探索世界</title>
 <meta name="keywords" content="">
-<meta name="description" content="">
+<meta name="description" content=" - LQ7 | 以創作和思考探索世界">
 <meta name="author" content="LQ7">
-<link rel="canonical" href="http://localhost:1313/404.html">
+<link rel="canonical" href="http://localhost:1313/writing/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fd5566c526ae48aadabd950798a2dc3568536401560eae5caac3765a42a9e7b5.css" integrity="sha256-/VVmxSauSKravZUHmKLcNWhTZAFWDq5cqsN2WkKp57U=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
@@ -18,7 +18,8 @@
 <link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/404.html">
+<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/writing/index.xml" title="rss">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/writing/">
 <noscript>
     <style>
         #theme-toggle,
@@ -108,7 +109,7 @@
             </li>
             <li>
                 <a href="http://localhost:1313/writing/" title="寫作習慣">
-                    <span>寫作習慣</span>
+                    <span class="active">寫作習慣</span>
                 </a>
             </li>
             <li>
@@ -134,8 +135,7 @@
         </ul>
     </nav>
 </header>
-<main class="main">
-<div class="not-found">404</div>
+<main class="main"> 
     </main>
     
 <footer class="footer">
